<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_SimMovitracConfig" Id="{372ffd22-1ef0-002e-0437-63c92294bcff}">
    <Declaration><![CDATA[TYPE ST_SimMovitracConfig :
STRUCT
	fDecCoastStop		: REAL := 200.0;	//Deceleration for coast/brake stop in ms. Reference speed is 3000 rpm.
	fDecRapidStop		: REAL := 500.0;	//Deceleration for emergency stop in ms. Reference speed is 3000 rpm.
	fProcessRamp		: REAL := 1000.0;	//Acc/Dec in ms when ramp via bus is not assigned. Reference speed is 3000 rpm.
	fGearFactor			: REAL := 1.0;		//Ratio for velocity output
	fReferenceVelocity	: REAL := 3000.0;

	nCtrlAssign			: E_SimMovitracAssign := E_SimMovitracAssign.ProcessData1; //Control word assignment
	nSpeedAssign		: E_SimMovitracAssign := E_SimMovitracAssign.ProcessData2; //Speed setpoint assignment
	nRampAssign			: E_SimMovitracAssign := E_SimMovitracAssign.NoAssignment; //Ramp setpoint assignment
	nStatusAssign		: E_SimMovitracAssign := E_SimMovitracAssign.ProcessData1; //Status word assignment
	nSpeedActAssign		: E_SimMovitracAssign := E_SimMovitracAssign.ProcessData2; //Actual speed assignment
	
	bSwapProcessData	: BOOL; //SWAP Process Data from/to FIELDBUS
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>