<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_SimMovitracControlData" Id="{2a38df91-a90b-0143-0ecb-a6251c213bda}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_SimMovitracControlData :
STRUCT
	bControllerInhibit		: BIT;	//0			0 = Enable, 1 = Inhibit controller, activate brake
	bRapidStop				: BIT;	//1			0 = Rapid stop, 1 = Enable
	bStop					: BIT;	//2			0 =  Stop at integrator ramp or process ramp, 1 = Enable
	bReserved3				: BIT;	//3			Currently not used
	bReserved4				: BIT;	//4			Currently not used
	bReserved5				: BIT;	//5			Currently not used
	bResetFAULT		  		: BIT;	//6			0 → 1 = Reset fault 
	bReserved7				: BIT;	//7			Currently not used	                            
	bDirectionMotorPoti		: BIT;	//8			0 = CW, 1 = CCW 
	bMotorPotiUp			: BIT;	//9			1 = Increase poti value
	bMotorPotiDown			: BIT;	//10		1 = Decrease poti value
	bFixedInternalSetpoints	: BIT;	//11		1 = Fixed internal setpoints
	bFixedInternalSetp1		: BIT;	//12		1 = Fixed internal setpoint 1
	bFixedSetpSwitchover	: BIT;	//13		1 = Fixed setpoint switchover
	bReserved14				: BIT;	//14		Currently not used
	bReserved15				: BIT;	//15		Currently not used
	nSetpointSpeed			: INT; 	//			Setpoint speed in 0.2 rpm
	nRamp					: UINT; //			Ramp in ms			
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>